# automatizacion-broker

./: .gitignore  README.md  REFACTORING_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  source_data.html
src/automation_broker/: __init__.py  cli.py  models.py  normalization.py
src/automation_broker/fillers/: absanet.py  field_fillers.py  mapping.yaml  selenium_helpers.py  ui_panels.py
src/automation_broker/parsers/: allianz_auto.py
tests/: conftest.py  test_absanet_refactored.py  test_allianz_parser.py  test_field_fillers.py  test_mapping.py  test_selenium_helpers.py
